<resources>
    <string name="app_name">Menus</string>

    <!-- MAIN -->
    <string name="hello_world">Hola Mundo</string>
    <string name="more_options">PopupMenu en Android</string>
    <string name="popupmenu_en_android">PopupMenu En Android</string>
    <string name="subtitle_text">El PopupMenu en Android es un menú \nque se ancla a un View</string>

    <!-- MENÚ -->
    <string name="edit_action">Editar</string>
    <string name="delete_action">Eliminar</string>
    <string name="share_action">Compartir</string>
    <string name="create_pdf_action">Generar PDF</string>
    <string name="print_action">Imprimir</string>
    <string name="send_action">Enviar</string>
    <string name="mark_as_paid_action">Marcar como pagada</string>
    <string name="mostrarConsumo">Mostrar_consumo</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_action">Ajustes</string>

    <!-- POPUP MENÚ -->
    <string name="anyadirFavoritos">Añadir a favoritos</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="moveA">Mover a</string>


</resources>