<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        app:title="Mi Aplicación" />

    <!-- Contenido de la actividad -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_gravity="center"
        android:padding="16dp"/>

    <!-- CONTENEDOR  MENU -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <!-- Imagen a la izquierda -->
        <ImageView
            android:id="@+id/item_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <!--  Linea que divide en dos  -->
        <LinearLayout
            android:id="@+id/main_ly_linea"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <!-- Texto en el centro -->
            <TextView
                android:id="@+id/item_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popupmenu_en_android"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Texto en el centro -->
            <TextView
                android:id="@+id/item_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_text"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/more_actions_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/more_options"
            android:padding="4dp"
            android:src="@drawable/more_actions_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</LinearLayout>
